ContainerNode::setActive should not sleep for 100ms on platforms that do not implement synchronous repaint(true) semantics https://bugs.webkit.org/show_bug.cgi?id=87054

Patch by James Robinson <jamesr@chromium.org> on 2013-03-05
Reviewed by Darin Adler.

Source/WebCore:

Adds a new ChromeClient function to query if the platform supports the immediate parameter
to the invalidation APIs and guards the synchronous repaint logic in ContainerNode::setActive()
with it.

* dom/ContainerNode.cpp:
(WebCore::ContainerNode::setActive):
* page/ChromeClient.h:
(WebCore::ChromeClient::supportsImmediateInvalidation):

Source/WebKit/mac:

The Mac WebKit1 port supports immediate invalidations.

* WebCoreSupport/WebChromeClient.h:
(WebChromeClient):
* WebCoreSupport/WebChromeClient.mm:
(WebChromeClient::supportsImmediateInvalidation):

Canonical link: https://commits.webkit.org/129821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144795 268f45cc-cd09-0410-ab3c-d52691b4dbfc