Source/WebKit/mac/WebCoreSupport/WebChromeClient.h
@@ -88,6 +88,7 @@ public:
 
     virtual WebCore::IntRect windowResizerRect() const OVERRIDE;
 
+    virtual bool supportsImmediateInvalidation() OVERRIDE;
     virtual void invalidateRootView(const WebCore::IntRect&, bool) OVERRIDE;
     virtual void invalidateContentsAndRootView(const WebCore::IntRect&, bool) OVERRIDE;
     virtual void invalidateContentsForSlowScroll(const WebCore::IntRect&, bool) OVERRIDE;
